# kernel_shapes

./: .gitignore  .tool-versions  README.md  pyproject.toml
ESC-50-master/: README_ESC50.md
kernel_shapes/: create-specs.py  esc50_dataset.py  sound_cnn.py  spec_augment.py  train.py  utils.py
